# Rust-Screen-Disabler

./: Cargo.toml  README.md  app.rc  build.rs
.github/workflows/: build-linux.yml  build-macos.yml  build-win.yml
assets/: icon.icns
src/: keys.rs  main.rs  screen.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
